Formatting and handle warnings