@@ -1,21 +1,21 @@
 package org.schlunzis.neuroevolution.model.track;
 
+import lombok.Getter;
 import org.schlunzis.neuroevolution.sdk.track.Track;
 import org.schlunzis.neuroevolution.sdk.util.Boundary;
 import org.schlunzis.neuroevolution.sdk.util.PVector;
 import org.schlunzis.neuroevolution.util.OpenSimplexNoise;
 
-import lombok.Getter;
-
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.ThreadLocalRandom;
 
 public class PerlinTrack implements Track {
 
-    private int parts = 900;
-    private int checkpointDivider = 30;
-    private int noiseMax = 8;
-    private double halfTrackWidth = 3d/40d;
+    private static final int PARTS = 900;
+    private static final int CHECKPOINT_DIVIDER = 30;
+    private static final int NOISE_MAX = 8;
+    private static final double HALF_TRACK_WIDTH = 3d / 40d;
 
     @Getter
     private PVector start;
@@ -25,7 +25,7 @@ public class PerlinTrack implements Track {
     @Getter
     private List<Boundary> checkpoints;
 
-    public String getTrackName(){
+    public String getTrackName() {
         return "PerlinTrack";
     }
 
@@ -34,20 +34,20 @@ public class PerlinTrack implements Track {
         ArrayList<PVector> ptsInner = new ArrayList<>();
         ArrayList<PVector> ptsOuter = new ArrayList<>();
         checkpoints = new ArrayList<>();
-        OpenSimplexNoise noise = new OpenSimplexNoise((long) (Math.random() * 1000000));
-        for (int i = 0; i < parts; i++) {
-            double a = map(i, 0, parts, 0, 2 * Math.PI);
-            double xoff = map(Math.cos(a), -1, 1, 0, noiseMax);
-            double yoff = map(Math.sin(a), -1, 1, 0, noiseMax);
+        OpenSimplexNoise noise = new OpenSimplexNoise(ThreadLocalRandom.current().nextLong());
+        for (int i = 0; i < PARTS; i++) {
+            double a = map(i, 0, PARTS, 0, 2 * Math.PI);
+            double xoff = map(Math.cos(a), -1, 1, 0, NOISE_MAX);
+            double yoff = map(Math.sin(a), -1, 1, 0, NOISE_MAX);
             double r = map(noise.eval(xoff, yoff), -1, 1, 0.25, 0.4);
-            double innerX = Math.cos(a) * (r - halfTrackWidth) +  0.5;
-            double innerY = Math.sin(a) * (r - halfTrackWidth) +  0.5;
+            double innerX = Math.cos(a) * (r - HALF_TRACK_WIDTH) + 0.5;
+            double innerY = Math.sin(a) * (r - HALF_TRACK_WIDTH) + 0.5;
             ptsInner.add(new PVector(innerX, innerY));
 
-            double outerX = Math.cos(a) * (r + halfTrackWidth) +  0.5;
-            double outerY = Math.sin(a) * (r + halfTrackWidth) +  0.5;
+            double outerX = Math.cos(a) * (r + HALF_TRACK_WIDTH) + 0.5;
+            double outerY = Math.sin(a) * (r + HALF_TRACK_WIDTH) + 0.5;
             ptsOuter.add(new PVector(outerX, outerY));
-            if (i % checkpointDivider == 0)
+            if (i % CHECKPOINT_DIVIDER == 0)
                 checkpoints.add(new Boundary(innerX, innerY, outerX, outerY));
 
         }
@@ -55,21 +55,21 @@ public class PerlinTrack implements Track {
         walls.addAll(Boundary.createBoundaries(ptsInner, true));
         walls.addAll(Boundary.createBoundaries(ptsOuter, true));
 
-        start = checkpoints.get(0).midPoint();
+        start = checkpoints.getFirst().midPoint();
     }
 
     @Override
     public PVector getStartVelocity() {
-        Boundary boundary = checkpoints.get(0);
-		PVector v = PVector.sub(boundary.getA(), boundary.getB());
-		v.rotate(-Math.PI * 0.5);
-		v.normalize();
-		return v;
+        Boundary boundary = checkpoints.getFirst();
+        PVector v = PVector.sub(boundary.getA(), boundary.getB());
+        v.rotate(-Math.PI * 0.5);
+        v.normalize();
+        return v;
     }
 
     /**
      * taken from Processing
-     * 
+     *
      * @param value
      * @param inputMin
      * @param inputMax
