@@ -5,9 +5,11 @@ import lombok.SneakyThrows;
 import java.io.File;
 import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Constructor;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Enumeration;
@@ -17,12 +19,11 @@ import java.util.jar.JarFile;
 
 public class PluginLoader {
 
-    private static final String pluginFolder = "plugins";
+    private static final String PLUGIN_FOLDER = "plugins";
 
     private static File getPluginFolder() {
         String path = getProgramPath();
-        File file = new File(path + File.separatorChar + pluginFolder);
-        return file;
+        return new File(path + File.separatorChar + PLUGIN_FOLDER);
     }
 
     public static void init() {
@@ -34,7 +35,7 @@ public class PluginLoader {
     /**
      * Because of the call to {@link #classImplementsInterface} this method will
      * only work for interfaces
-     * 
+     *
      * @param <T>   The interface type of the plugin
      * @param clazz
      * @return
@@ -49,47 +50,46 @@ public class PluginLoader {
 
             ArrayList<T> classes = new ArrayList<>();
 
-            for (int i = 0; i < plugins.length; i++) {
+            for (File plugin : plugins) {
                 // Skip if the file is not a jar
-                if (!plugins[i].getName().endsWith(".jar"))
+                if (!plugin.getName().endsWith(".jar"))
                     continue;
 
                 // Create a JarFile
-                JarFile jarFile = new JarFile(plugins[i]);
+                try (JarFile jarFile = new JarFile(plugin)) {
+                    // Get the entries
+                    Enumeration<?> e = jarFile.entries();
 
-                // Get the entries
-                Enumeration<?> e = jarFile.entries();
+                    // Create a URL for the jar
+                    URL[] urls = {new URI("jar:file:" + plugin.getAbsolutePath() + "!/").toURL()};
+                    try (URLClassLoader cl = URLClassLoader.newInstance(urls)) {
 
-                // Create a URL for the jar
-                URL[] urls = { new URL("jar:file:" + plugins[i].getAbsolutePath() + "!/") };
-                ClassLoader cl = URLClassLoader.newInstance(urls);
+                        while (e.hasMoreElements()) {
+                            JarEntry je = (JarEntry) e.nextElement();
 
-                while (e.hasMoreElements()) {
-                    JarEntry je = (JarEntry) e.nextElement();
+                            // Skip directories
+                            if (je.isDirectory() || !je.getName().endsWith(".class")) {
+                                continue;
+                            }
 
-                    // Skip directories
-                    if (je.isDirectory() || !je.getName().endsWith(".class")) {
-                        continue;
-                    }
+                            // -6 because of .class
+                            String className = je.getName().substring(0, je.getName().length() - 6);
+                            className = className.replace('/', '.');
 
-                    // -6 because of .class
-                    String className = je.getName().substring(0, je.getName().length() - 6);
-                    className = className.replace('/', '.');
+                            // Load the class
+                            Class<?> c = cl.loadClass(className);
 
-                    // Load the class
-                    Class<?> c = cl.loadClass(className);
-
-                    // if class is instance of IPlayer
-                    if (classImplementsInterface(c, clazz)) {
-                        // Create an instance of the class
-                        Constructor<?> constructor = c.getConstructor();
-                        @SuppressWarnings("unchecked")
-                        T player = (T) constructor.newInstance();
-                        classes.add(player);
+                            // if class is instance of IPlayer
+                            if (classImplementsInterface(c, clazz)) {
+                                // Create an instance of the class
+                                Constructor<?> constructor = c.getConstructor();
+                                @SuppressWarnings("unchecked")
+                                T player = (T) constructor.newInstance();
+                                classes.add(player);
+                            }
+                        }
                     }
                 }
-                jarFile.close();
-
             }
             return classes;
         } catch (Exception e) {
@@ -104,14 +104,13 @@ public class PluginLoader {
 
     /**
      * <a href=https://stackoverflow.com/a/11166880> source </a>
-     * 
+     *
      * @return
      */
     @SneakyThrows(UnsupportedEncodingException.class)
     private static String getProgramPath() {
         URL url = PluginLoader.class.getProtectionDomain().getCodeSource().getLocation();
-        String jarPath = URLDecoder.decode(url.getFile(), "UTF-8");
-        String parentPath = new File(jarPath).getParentFile().getPath();
-        return parentPath;
+        String jarPath = URLDecoder.decode(url.getFile(), StandardCharsets.UTF_8);
+        return new File(jarPath).getParentFile().getPath();
     }
 }
